<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myplace.com.example.mfit.Map">


    <item
        android:id="@+id/profile"
        android:orderInCategory="103"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/profile_ico"/>
    <item
        android:id="@+id/add_friend"
        android:orderInCategory="103"
        android:title="@string/add_friend"
        app:showAsAction="ifRoom"
        android:icon="@drawable/show_people"/>
    <item
        android:id="@+id/filter"
        android:orderInCategory="103"
        android:title="@string/filter"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_filter_alt_black_24"/>


</menu>
