<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myplace.com.example.mfit.AddTokenActivity">

    <item
        android:id="@+id/show_map"
        android:orderInCategory="102"
        android:title="@string/show_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_map"/>
    <item
        android:id="@+id/filter"
        android:orderInCategory="103"
        android:title="@string/filter"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_filter_alt_black_24"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="103"
        android:title="@string/about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_about"/>
</menu>
