<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:layout_margin="10dp"
    tools:context="com.example.mfit.LoginActivity">
    <ImageView
        android:layout_width="300dp"
        android:paddingTop="10dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:src="@drawable/token"
        android:contentDescription="@string/app_name">
    </ImageView>
    <EditText
        android:id="@+id/emailEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"

        android:hint="@string/email"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/passEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/password"
        android:importantForAutofill="no"/>


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/noAccTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textColor="#3399ff"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp" />

</LinearLayout>