<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mfit.ViewToken"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="177dp"
        android:layout_height="25dp"
    android:layout_marginTop="10dp"
        android:text="@string/token_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textViewIntensity"
        android:layout_width="177dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/token_intensity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="169dp"
        android:layout_height="21dp"
        android:layout_marginTop="10dp"
        android:text="@string/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/textViewPlacedBy"
        android:layout_width="169dp"
        android:layout_height="21dp"
        android:layout_marginTop="10dp"
        android:text="@string/placedBy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tokenValue"
        android:layout_width="169dp"
        android:layout_height="21dp"
        android:layout_marginTop="10dp"
        android:text="@string/points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

<ImageView
    android:id="@+id/tokenImage"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_marginTop="25dp"
    android:layout_marginRight="80dp"
    android:layout_marginLeft="80dp"
    />
    <Button
        android:id="@+id/ok_button"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:text="OK"

        />
</LinearLayout>