<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mfit.ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/empty_profile_picture_png_2"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Name loading..."
            android:textSize="28sp"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:elevation="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_full_name"
                    android:layout_height="0dp">

                </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/linearIcons"
            android:layout_marginTop="20dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_full_name">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pehar"
                     />


                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/points"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack"
                    android:text="@string/nula"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_add_circle_outline_white_48"
                    android:tint="@color/colorPrimary"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/added_tokens"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack"
                    android:text="@string/nula"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/show_people"
                    android:tint="@color/colorGreen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/friends_number"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack"
                    android:text="@string/nula"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_email_black_36"
                android:tint="@color/colorPrimary"
                />
            <TextView
                android:id="@+id/profile_email"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/calendar"
                android:tint="@color/colorGreen"
                />
            <TextView
                android:id="@+id/profile_date_of_birth"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_birth"/>

        </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="40dp"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <Button
              android:id="@+id/logOutBtn"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="40dp"
              android:text="@string/log_out" />
      </LinearLayout>
        <CheckBox
            android:id="@+id/chlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_location"/>
    </LinearLayout>

</ScrollView>